# HihiiTroLy

./: .gitignore  README.md  VideoPlayer.tsx  backend-api-docs.md  changelog.txt  copy-build-files.bat  fix-names.ps1  next.config.ts  package-lock.json  package.json
scripts/: publish.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/_api/v-stream/: route.ts
src/app/components/: AnimeDetail.tsx  AnimeHub.tsx  AnimePlayer.tsx  ConfirmModal.tsx  DiscordHub.tsx  DiscordRpcHub.tsx  DiscordVoiceHub.tsx  DiscordVoiceOverlay.tsx  GmailHub.tsx  ShortReelsHub.tsx  ValorantAccounts.tsx  ValorantBattlepass.tsx  ValorantHistory.tsx  ValorantHub.tsx  ValorantStats.tsx  ValorantStore.tsx
src/app/pip/: page.tsx
src/app/store/: useValorantStore.ts
src/components/: Sidebar.tsx
